<resources>
    <string name="app_name">InstagramClone</string>

    <string name="back4app_server_url">https://parseapi.back4app.com/</string>

    <!-- Change the following strings as required -->
    <string name="back4app_app_id">BU6yuEfSyPxUpEJRYSamEXrfFDrdvX4fR4ztgxcx</string>
    <string name="back4app_client_key">ga1XgEruZqRG9yBWGOo85f2nLz5d4Rm8uRUGzhzR</string>

    <string name="sign_up">Sign Up</string>
    <string name="email">Please enter an email</string>
    <string name="username">Please enter an username</string>
    <string name="password">Please enter a password</string>
    <string name="login">Login</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="post_image">Post image</string>
    <string name="logout">Logout</string>
</resources>